--- a/app.json
+++ b/app.json
@@ -34,6 +34,10 @@
       "description": "Get this value from https://my.telegram.org",
       "value": ""
     },
+   "CHAT_BASE_TOKEN": {
+      "description": "Get this value from https://chatbase.com",
+      "value": ""
+    },
     "AUTH_USERS": {
       "description": "allow only pre-defined users to use this bot",
       "value": "7351948 20516707 23122162 500346573"
